# ruview-four-node-room-sensing

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cog-ha-matter-release.yml  desktop-release.yml  firmware-qemu.yml  fix-regression-guard.yml  pip-release.yml  security-scan.yml  threejs-pages.yml  verify-pipeline.yml
Node_Training/: node_training.txt
custom-pose-dashboard/: README.md  app.py  requirements.txt  run-dashboard.ps1
custom-pose-dashboard/static/: index.html
docker/: docker-compose.yml  docker-entrypoint.sh
docs/: MMFI_MODEL_COMPATIBILITY.md  POSE_FALL_DEMO_GUIDE.md  POSE_FALL_IMPLEMENTATION_AUDIT.md  windows-four-node-offline.md
docs/adr/: ADR-150-rf-foundation-encoder.md
scripts/: c6-presence-watcher.py  esp32-serial-udp-bridge.py  export_pose_tcn_to_rvf.py  pose-training-windows.ps1  run-pose-fall-local.ps1  ruview-wireless.cmd  ruview-wireless.ps1  train_room_pose_gpu.py  udp-5005-to-docker.py  windows-live-bridge.py
ui/: app.js  index.html  style.css  sw.js
ui/components/: LiveDemoTab.js  PoseDetectionCanvas.js  SensingTab.js  TabManager.js
ui/mobile/: package-lock.json  package.json
ui/services/: api.service.js  model.service.js  pose.service.js  sensing.service.js  training.service.js
ui/utils/: command-palette.js  pose-renderer.js  router.js
v2/crates/cog-person-count/: Cargo.toml
zone-dashboard/: README.md  SHOWCASE-CHECKLIST.md  app.py  check-deployment.ps1  config.json  install-zone-dashboard.ps1  requirements.txt  run-zone-dashboard.ps1
zone-dashboard/static/: index.html
(+6 files in other folders)
